Fixed overflow

--- a/css/styles.css
+++ b/css/styles.css
@@ -32,13 +32,14 @@
 html {
     color: rgb(150, 40, 40);
 overflow: hidden;
+height: 100%;
 }
 
 body {
     background-color: var(--backgroundcolor)
     ;
     margin: 0 0 0 0;
-    height: 100vh;
+    height: 100%;
     overflow-x: hidden;
 }
 header img {
@@ -63,7 +64,7 @@ header img {
     align-items: center;
 }
 .main-container {
-    height: 100vh;
+    height: 100%;
     justify-content: space-evenly;
     font-size: 50px;
     text-align: center;
